# CPET-RS2Peak

./: .gitignore  LICENSE  README.md  inference.py  pyproject.toml  train.py
data/: codebook.yml  inference_columns.csv  model_mapping.yml  sample.csv  training_columns.csv
results/hparams/: 007c88.pkl  2da769.pkl  3bd8d1.pkl  4a12b8.pkl  63c834.pkl  8e2e6e.pkl
results/models/: 007c88_[0, 1, 2]_0.pkl  007c88_[0, 1]_0.pkl  007c88_[0]_0.pkl  2da769_[0, 1, 2]_0.pkl  2da769_[0, 1]_0.pkl  2da769_[0]_0.pkl  3bd8d1_[0, 1, 2]_0.pkl  4a12b8_[0, 1, 2]_0.pkl  4a12b8_[0, 1]_0.pkl  4a12b8_[0]_0.pkl  63c834_[0, 1, 2]_0.pkl  8e2e6e_[0, 1, 2]_0.pkl
results/scalers/: 007c88_0.pkl  2da769_0.pkl  3bd8d1_0.pkl  4a12b8_0.pkl  63c834_0.pkl  8e2e6e_0.pkl
utils/: __init__.py  data_loader.py  exp.py
