[project]
name = "CPET-RS2Max"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aim>=3.27.0",
    "rich>=13.9.4",
    "pycaret[tuners]==3.3.2",
    "kaleido==0.2.1",
    "omegaconf>=2.3.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
]

[tool.uv]
link-mode = "symlink"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
